<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mess2_algorithm_demos</name>
  <version>0.0.0</version>
  <description>ROS2 package for C++ algorithm plugins related to mess2 CSCP research.</description>
  <maintainer email="mjnelson@wpi.edu">marinarasauced</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mess2_algorithm_threat_static</depend>
  <depend>mess2_algorithm_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>